[html] Even more tooltips

--- a/html/index.htm
+++ b/html/index.htm
@@ -17,5 +17,7 @@
   <div id="tooltip"></div>
   
   <noscript><h3>This site requires javascript</h3></noscript>
+  
+  <div id="footer"></div>
 </body>
 </html>
