--- a/html/index.htm
+++ b/html/index.htm
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!--
+    - Copyright © 2012 Mozilla Corporation
+    -
+    - This Source Code Form is subject to the terms of the Mozilla Public
+    - License, v. 2.0. If a copy of the MPL was not distributed with this file,
+    - You can obtain one at http://mozilla.org/MPL/2.0/.
+    -->
   <title>ARE WE SLIM YET?</title>
   <script type="text/javascript" src="./jquery-1.7.1.min.js"></script>
   <script type="text/javascript" src="./jquery.flot.min.js"></script>
