--- a/html/index.htm
+++ b/html/index.htm
@@ -15,7 +15,7 @@
   <link href="./slimyet.css" rel="stylesheet" />
 </head>
 <body>
-  <h1>Are we <span class="emph">slim</span> yet?</h1>
+  <h1 id='page-header'>Are we <span class="emph">slim</span> yet?</h1>
   
   <div id="graphs">
     <h3 style="margin-top: 150px">Loading...</h3>
