Use Quicksand web font for "Slim" in header.

--- a/html/index.htm
+++ b/html/index.htm
@@ -15,7 +15,7 @@
   <link href="./slimyet.css" rel="stylesheet" />
 </head>
 <body>
-  <h1 id='page-header'>Are we <span class="emph">slim</span> yet?</h1>
+  <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
   
   <div id="graphs">
     <h3 style="margin-top: 150px">Loading...</h3>
