[html/status] Re-enable compile builds now that benchtester can handle them
Bump benchtester for those fixes

--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -24,7 +24,7 @@
         <option value="" selected="selected">Select</option>
         <option value="nightly">Nightly build</option>
         <option value="tinderbox">Tinderbox build (mozilla-central)</option>
-        <!-- <option value="compile">Custom build</option> -->
+        <option value="compile">Compile of specific revision(s) (mozilla-central)</option>
       </select>
       <input type="checkbox" value="multi" id="reqBuildMulti"></input><label for="reqBuildMulti"> Build range</label>
       <input type="checkbox" value="multi" id="reqPriority"></input><label for="reqPriority"> Insert at front of queue</label>
