[html] Fix up header centering a little, try sticking a random <hr> in

--- a/html/index.htm
+++ b/html/index.htm
@@ -15,8 +15,9 @@
   <link href="./slimyet.css" rel="stylesheet" />
 </head>
 <body>
+  <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
+  <hr id="headerRule" />
   <div id="graphs">
-    <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
     <h3 style="margin-top: 150px">Loading...</h3>
   </div>
   
