[html/status] Add 'note' field to batch requests for explaining why they were submitted

--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -38,6 +38,10 @@
       <span id="reqEndLabel" class="note"></span>
       <input type="text" id="reqEndBuild"></input>
     </div>
+    <div id="reqMsgBox" style="display:none;">
+      <span id="reqMsgLabel" class="note">Note</span>
+      <input type="text" id="reqMsg"></input>
+    </div>
     <div id="reqSubmitbox" style="display: none;">
       <input id="reqSubmit" type="submit" value="Queue &laquo; no turning back &raquo;"></input>
       <br /><span class="note" id="reqError"></span>
