--- a/html/faq.htm
+++ b/html/faq.htm
@@ -14,16 +14,25 @@
 <body>
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
 <!-- This file is generated from faq/build.sh, do not edit directly -->
-<h1>AWSY FAQ</h1>
+<h1>FAQ</h1>
 <h2>What is this site?</h2>
-<p>''Are We Slim Yet?'' is brought to you by John Schoenick of Mozilla's
-<a href="https://wiki.mozilla.org/Performance/MemShrink">MemShrink</a> team.  The MemShrink team was formed in June 2011, and is tasked
-with monitoring and reducing Firefox's memory usage.</p>
-<p>Source for ''Are We Slim Yet?'' and its benchmarks is available on
+<p>''Are We Slim Yet?'' is a Firefox memory benchmark as well as a site for
+visualizing the data it produces over time. The aim is to track Firefox's memory
+footprint, both to measure its progress over time, and to catch any regressions
+that are introduced.</p>
+<p>''Are we Slim Yet?'' was created by John Schoenick of Mozilla's <a href="https://wiki.mozilla.org/Performance/MemShrink">MemShrink</a>
+team.  The MemShrink team was formed in June 2011, and is tasked with monitoring
+and reducing Firefox's memory usage.</p>
+<p>The source for ''Are We Slim Yet?'' and its benchmarks is available on
 <a href="https://github.com/Nephyrin/MozAreWeSlimYet">Github</a>.</p>
 <h2>Exactly which versions of Firefox are plotted here?</h2>
-<p>Every day, Mozilla's build infrastructure generates a new ''nightly build'' of
-Firefox.  We test the 64-bit Linux nightly builds.</p>
+<p>For every <a href="http://hg.mozilla.org/mozilla-central/pushloghtml">push</a> to Mozilla's central repository, the build
+infrastructure generates and tests a <a href="https://tbpl.mozilla.org/?tree=Mozilla-central">set of builds</a>. For historical data,
+prior to March 2012, we have tested the respective Firefox <a href="http://nightly.mozilla.org/">nightly</a> builds. For
+specific ranges, we may also have chosen to run per-changeset (rather than
+per-push) builds in order to track down a regression. All tests are run against
+Linux 64-bit (non-pgo) compiles, so platform-dependent regressions may not be
+captured here.</p>
 <p>The dates on the x-axis indicate when we switched development ''to'' a given
 version.  For example, we started developing Firefox 5 on March 3, 2011, but we
 didn't release it for three months after that.  In the meantime, we started on
@@ -33,22 +42,25 @@ to the points directly under the "FF N+1" line, but we normally make some
 changes to Firefox N even after we started working on Firefox N+1, and those
 changes aren't plotted here.</p>
 <h2>How is this data generated?</h2>
-<p>We run a nightly build of Firefox through a benchmark script (written using
+<p>We run the target build of Firefox through a benchmark script (written using
 <a href="https://github.com/mozautomation/mozmill">mozmill</a>) and measure its memory usage at a variety of points along the way.
 The testing procedure is as follows.</p>
 <ul>
 <li>Start the browser, record '''Fresh start''' memory.</li>
 <li>Run Mozilla's <a href="https://wiki.mozilla.org/Buildbot/Talos#tp5">TP5</a> pageload benchmark 5 times.  TP5 loads 100 popular
-    webpages, served from a local webserver.  We load the pages into 30
-    different tabs (XXX round-robin?), with a XXXs delay between pageloads.</li>
-<li>Record '''After TP5''' memory usage.  '''After TP5 [+30s, forced GC]''' is
-    measured after sitting idle for 30 seconds and then forcing a garbage
-    collection.</li>
-<li>Close all open tabs and record '''After TP5, tabs closed''' memory usage.</li>
+    webpages, served from a local webserver.  We load the pages round-robin into
+    30 different tabs, with a 10s delay between pageloads.</li>
+<li>Record '''After TP5''' memory usage.  '''After TP5 [+30s]''' and '''After
+    TP5 [+30s, forced GC]''' are measured after sitting idle for 30 seconds and
+    then after forcing a garbage collection, respectively. In theory, these
+    latter two lines should follow each other closely.</li>
+<li>Close all open tabs and record '''After TP5, tabs closed''' and then
+    '''After TP5, tabs closed [+30s]''' memory usage.</li>
 </ul>
 <p>Every time we measure memory usage, we also collect a full snapshot of
-about:memory.  You can browse these snapshots by clicking on a point in the
-graph.</p>
+about:memory.  You can browse these snapshots by clicking on any point in the
+graph. The data that was used for generating that particular point will be
+highlighted in red.</p>
 <h2>What's the difference between "resident memory" and "explicit"?</h2>
 <p>'''Resident memory''' (also known as "resident set size" or RSS) is the single
 best measure of a process's memory usage.  RSS measures the amount of physical
@@ -60,20 +72,26 @@ checking for memory leaks.  If the measured explicit value at two points in time
 is the same, then we've <code>free</code>'d as much as we've <code>malloc</code>'ed between those two
 points in time.  In contrast, the RSS values at those two points might not be
 the same, for example because our heap might become fragmented.</p>
-<p>The ''explicit'' measurement comes from Firefox itself, and it's had bugs in the
-past, and the exact set of allocations it covers has changed over time.  It's
-therefore tricky to compare ''explicit'' measurements between two builds which
-happened a long time apart.  The ''resident'' numbers come from the operating
-system and should be comparable between all builds.</p>
+<p>The ''explicit'' measurement comes from Firefox itself. It has had bugs in the
+past, and the exact set of allocations it covers has changed over time.  It is
+therefore tricky to compare ''explicit'' measurements between two distant
+builds.  The ''resident'' numbers come from the operating system and should be
+comparable between all builds.</p>
 <h2>Why are there gaps in the graphs?</h2>
-<p>XXX I don't know.</p>
+<p>Gaps indicate areas where the relevant builds failed to be fully tested, or
+where the data being graphed was not available. The most notable is a gap from
+July to August 2011 where the TP5 pageset would actually trigger a crash in our
+test framework (yikes!). For the Explicit memory graphs, much of the memory
+reporting framework was not well polished until about July 2011. This explains
+the lack of earlier data as well as the rather sporadic datapoints for the first
+few months.</p>
 <h2>"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh</h2>
 <p>start" -- doesn't that mean Firefox leaks a ton of memory?</p>
 <p>Well, not exactly.</p>
-<p>If you look at the equivalent ''explicit'' numbers, you'll see that the "after
-TP5, tabs closed [+30s]" measure is very close to the "fresh start" measure.
-This means Firefox is calling <code>free()</code> on almost all the memory it allocated, so
-it's not leaking memory, at least not in the traditional sense.</p>
+<p>If you look at the equivalent ''explicit'' numbers, you'll see that the '''After
+TP5, tabs closed [+30s]''' measure is very close to the '''Fresh start'''
+measure. This means Firefox is releasing most all of the memory it allocates --
+so it is not leaking memory, at least not in the traditional sense.</p>
 <p>So if Firefox has freed all the memory it allocated during the test, why is it
 using more memory after the test?  Our data shows that most of the difference is
 due to ''heap fragmentation''.  Before the test, all the objects on our heap are
@@ -86,40 +104,41 @@ trying to minimize the number of calls we make to <code>malloc</code>.</p>
 <p>Our data shows that the peak memory usage after the first run of TP5 is the same
 as our peak memory usage after the last run of TP5.  This means that, although
 Firefox remembers how much memory it used at its peak, its memory usage
-shouldn't increase over time.</p>
+should not significantly increase over time.</p>
 <h2>This is all well and good, but my Firefox still leaks like a sieve.</h2>
 <p>We're sorry to hear that, and we'd like to help.  Here are some diagnostics you
 can try.</p>
 <p>First, double-check that you're on the latest version of Firefox.  We won't be
 able to help much if you're running an old version.  You can check for updates
 in the "Help -&gt; About Firefox" menu.</p>
-<h3>Check for add-on leaks</h3>
+<h4>Check for add-on leaks</h4>
 <p>In our experience, most severe leaks in Firefox these days are caused by leaky
 add-ons.  We know how important add-ons are to our users, and Mozilla's add-ons
 team has been doing heroic work to find and address leaks in add-ons before our
 users are affected.  But this work is still in its infancy, and there are a lot
 of add-ons we haven't yet tested.</p>
 <p>To see if add-ons are causing your problems, try <a href="http://support.mozilla.org/en-US/kb/Safe%20Mode">restarting Firefox in safe
-mode</a>, and see if Firefox still leaks.  If safe mode solves your
+mode</a>, and see if the problem persists.  If safe mode solves your
 problem, congratulations!  You probably have a leaky add-on.  Now you probably
 want to know which one is to blame.</p>
 <p>To figure out which add-on is leaking, start Firefox up outside safe mode,
-disable half your add-ons, and see if Firefox still leaks.  Repeat this process
+disable half of your add-ons, and see if the leaks persist.  Repeat this process
 to narrow down to just one (or a few) leaky add-ons.  (If it takes a long time
-for the leak to become aparent, you can look for <a href="https://developer.mozilla.org/en/Zombie_compartments#Reactive_checking">zombie compartments</a>, a
+for the leak to become aparent, you can look for <a href="">zombie compartments</a>, a
 common type of leak which is easy to identify even before Firefox starts using
 gigabytes of memory.)</p>
-<p>Once you've figured out which add-on(s) is (are) leaking, you're almost done!
-Just <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Core">file a bug</a>, and put "[MemShrink]" in the whiteboard (don't worry
-about the other metadata like the component; we'll fix it).  We'll contact the
-add-on developer and help him or her fix the problem.</p>
-<p>If you have trouble with any of this, find us on IRC (irc.mozilla.org,
+<p>Once you have figured out which add-on(s) is (are) leaking, you're almost done!
+Just <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Core">file a bug</a>, and put "[MemShrink]" in the "whiteboard" field (don't
+worry about the other metadata like the component; we'll fix it). We'll take
+care of contacting the add-on developer and helping him or her fix the problem.</p>
+<p>If you have trouble with any of this, find us on <a href="https://wiki.mozilla.org/IRC">IRC</a> (irc.mozilla.org,
 #memshrink).  We're happy to help.</p>
-<h3>If Firefox still leaks, even in safe mode, file a bug!</h3>
+<h4>If Firefox still leaks, even in safe mode, file a bug!</h4>
 <p>If the latest version of Firefox leaks for you, even in safe mode, we definitely
-want to hear about it.  Please, please <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Core">file a bug</a> (remember to put
+want to hear about it.  Please, <em>please</em> <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Core">file a bug</a> (remember to put
 [MemShrink] in the whiteboard), find us on IRC (irc.mozilla.org, #memshrink),
-send smoke signals...do something!  We need your help, particularly in this
-case.</p>  <div id="footer"></div>
+send smoke signals... do something!  We need your help, particularly in this
+case.</p>
+<p>https://developer.mozilla.org/en/Zombie_compartments#Reactive_checking</p>  <div id="footer"></div>
 </body>
 </html>
