--- a/html/faq.htm
+++ b/html/faq.htm
@@ -124,7 +124,7 @@ want to know which one is to blame.</p>
 <p>To figure out which add-on is leaking, start Firefox up outside safe mode,
 disable half of your add-ons, and see if the leaks persist.  Repeat this process
 to narrow down to just one (or a few) leaky add-ons.  (If it takes a long time
-for the leak to become aparent, you can look for <a href="">zombie compartments</a>, a
+for the leak to become aparent, you can look for <a href="https://developer.mozilla.org/en/Zombie_compartments#Reactive_checking">zombie compartments</a>, a
 common type of leak which is easy to identify even before Firefox starts using
 gigabytes of memory.)</p>
 <p>Once you have figured out which add-on(s) is (are) leaking, you're almost done!
@@ -138,7 +138,6 @@ care of contacting the add-on developer and helping him or her fix the problem.<
 want to hear about it.  Please, <em>please</em> <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Core">file a bug</a> (remember to put
 [MemShrink] in the whiteboard), find us on IRC (irc.mozilla.org, #memshrink),
 send smoke signals... do something!  We need your help, particularly in this
-case.</p>
-<p>https://developer.mozilla.org/en/Zombie_compartments#Reactive_checking</p>  <div id="footer"></div>
+case.</p>  <div id="footer"></div>
 </body>
 </html>
