[FAQ] Regenerate with new link colors change

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -11,7 +11,7 @@
   <title>ARE WE SLIM YET?</title>
   <link href="./slimyet.css" rel="stylesheet" />
 </head>
-<body>
+<body class="lightContent">
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
 <!-- This file is generated from faq/build.sh, do not edit directly -->
 <h1>FAQ</h1>
