[FAQ] Style cleanups

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -11,10 +11,10 @@
   <title>ARE WE SLIM YET?</title>
   <link href="./slimyet.css" rel="stylesheet" />
 </head>
-<body class="lightContent">
+<body class="faqPage lightContent">
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
 <!-- This file is generated from faq/build.sh, do not edit directly -->
-<h1>FAQ</h1>
+<h1>Frequently Asked Questions</h1>
 <h2>What is this site?</h2>
 <p>''Are We Slim Yet?'' is a Firefox memory benchmark as well as a site for
 visualizing the data it produces over time. The aim is to track Firefox's memory
