[FAQ] Remove redundant phrasing

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -17,8 +17,8 @@
 <h1>Frequently Asked Questions</h1>
 <h2>What is this site?</h2>
 <p>''Are We Slim Yet?'' is a Firefox memory benchmark as well as a site for
-visualizing the data it produces over time. The aim is to track Firefox's memory
-footprint, both to measure its progress over time, and to catch any regressions
+visualizing the data it produces. The aim is to track Firefox's memory
+footprint. Both to measure its progress over time, and to catch any regressions
 that are introduced.</p>
 <p>''Are we Slim Yet?'' was created by John Schoenick of Mozilla's <a href="https://wiki.mozilla.org/Performance/MemShrink">MemShrink</a>
 team.  The MemShrink team was formed in June 2011, and is tasked with monitoring
