--- a/html/faq.htm
+++ b/html/faq.htm
@@ -44,7 +44,7 @@ that are introduced.</p>
 team.  The MemShrink team was formed in June 2011, and is tasked with monitoring
 and reducing Firefox's memory usage.</p>
 <p>The source for ''Are We Slim Yet?'' and its benchmarks is available on
-<a href="https://github.com/Nephyrin/MozAreWeSlimYet">Github</a>.</p>
+<a href="https://github.com/Nephyrin/MozAreWeSlimYet">GitHub</a>.</p>
 <h2 id="exactly-which-versions-of-firefox-are-plotted-here">Exactly which versions of Firefox are plotted here?</h2>
 <p>For every <a href="http://hg.mozilla.org/mozilla-central/pushloghtml">push</a> to Mozilla's central repository, the build
 infrastructure generates and tests a <a href="https://tbpl.mozilla.org/?tree=Mozilla-central">set of builds</a>. For historical data,
