[FAQ] Fix TBPL link

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -47,7 +47,7 @@ and reducing Firefox's memory usage.</p>
 <a href="https://github.com/Nephyrin/MozAreWeSlimYet">GitHub</a>.</p>
 <h2 id="exactly-which-versions-of-firefox-are-plotted-here">Exactly which versions of Firefox are plotted here?</h2>
 <p>For every <a href="http://hg.mozilla.org/mozilla-central/pushloghtml">push</a> to Mozilla's central repository, the build
-infrastructure generates and tests a <a href="https://tbpl.mozilla.org/?tree=Mozilla-central">set of builds</a>. For historical data,
+infrastructure generates and tests a <a href="https://tbpl.mozilla.org/">set of builds</a>. For historical data,
 prior to March 2012, we have tested the respective Firefox <a href="http://nightly.mozilla.org/">nightly</a> builds. For
 specific ranges, we may also have chosen to run per-changeset (rather than
 per-push) builds in order to track down a regression. All tests are run against
