[FAQ] Link into main page with a nav bar

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -13,6 +13,10 @@
 </head>
 <body class="faqPage lightContent">
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
+  <div id="navbar" class="lightContent">
+    <a href="/">Main</a>
+    <span class="inactive">FAQ</span>
+  </div>
 <!-- This file is generated from faq/build.sh, do not edit directly -->
 <h1 id="frequently-asked-questions">Frequently Asked Questions</h1>
 <div class="toc">
