--- a/html/index.htm
+++ b/html/index.htm
@@ -17,7 +17,10 @@
 </head>
 <body>
   <div id='page-header'>Are we <span id='header-slim'>slim</span> yet?</div>
-  <hr id="headerRule" />
+  <div id="navbar" class="lightContent">
+    <span class="inactive">Main</span>
+    <a href="/faq.htm">FAQ</a>
+  </div>
   <div id="graphs">
     <h3 style="margin-top: 150px">Loading...</h3>
   </div>
