[FAQ] Fix up some markdown errors

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -27,7 +27,7 @@
 <li><a href="#how-is-this-data-generated">How is this data generated?</a></li>
 <li><a href="#whats-the-difference-between-resident-memory-and-explicit">What's the difference between "resident memory" and "explicit"?</a></li>
 <li><a href="#why-are-there-gaps-in-the-graphs">Why are there gaps in the graphs?</a></li>
-<li><a href="#rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh</a></li>
+<li><a href="#rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" -- doesn't that mean Firefox leaks a ton of memory?</a></li>
 <li><a href="#this-is-all-well-and-good-but-my-firefox-still-leaks-like-a-sieve">This is all well and good, but my Firefox still leaks like a sieve.</a><ul>
 <li><a href="#check-for-add-on-leaks">Check for add-on leaks</a><ul>
 <li><a href="#if-firefox-still-leaks-even-in-safe-mode-file-a-bug">If Firefox still leaks, even in safe mode, file a bug!</a></li>
@@ -40,14 +40,14 @@
 </ul>
 </div>
 <h2 id="what-is-this-site">What is this site?</h2>
-<p>''Are We Slim Yet?'' is a Firefox memory benchmark as well as a site for
+<p><em>Are We Slim Yet?</em> is a Firefox memory benchmark as well as a site for
 visualizing the data it produces. The aim is to track Firefox's memory
 footprint. Both to measure its progress over time, and to catch any regressions
 that are introduced.</p>
-<p>''Are we Slim Yet?'' was created by John Schoenick of Mozilla's <a href="https://wiki.mozilla.org/Performance/MemShrink">MemShrink</a>
+<p><em>Are we Slim Yet?</em> was created by John Schoenick of Mozilla's <a href="https://wiki.mozilla.org/Performance/MemShrink">MemShrink</a>
 team.  The MemShrink team was formed in June 2011, and is tasked with monitoring
 and reducing Firefox's memory usage.</p>
-<p>The source for ''Are We Slim Yet?'' and its benchmarks is available on
+<p>The source for <em>Are We Slim Yet?</em> and its benchmarks is available on
 <a href="https://github.com/Nephyrin/MozAreWeSlimYet">GitHub</a>.</p>
 <h2 id="exactly-which-versions-of-firefox-are-plotted-here">Exactly which versions of Firefox are plotted here?</h2>
 <p>For every <a href="http://hg.mozilla.org/mozilla-central/pushloghtml">push</a> to Mozilla's central repository, the build
@@ -57,7 +57,7 @@ specific ranges, we may also have chosen to run per-changeset (rather than
 per-push) builds in order to track down a regression. All tests are run against
 Linux 64-bit (non-pgo) compiles, so platform-dependent regressions may not be
 captured here.</p>
-<p>The dates on the x-axis indicate when we switched development ''to'' a given
+<p>The dates on the x-axis indicate when we switched development <em>to</em> a given
 version.  For example, we started developing Firefox 5 on March 3, 2011, but we
 didn't release it for three months after that.  In the meantime, we started on
 the code which would become Firefox 6 on April 12.</p>
@@ -70,36 +70,36 @@ changes aren't plotted here.</p>
 <a href="https://github.com/mozautomation/mozmill">mozmill</a>) and measure its memory usage at a variety of points along the way.
 The testing procedure is as follows.</p>
 <ul>
-<li>Start the browser, record '''Fresh start''' memory.</li>
+<li>Start the browser, record <strong>Fresh start</strong> memory.</li>
 <li>Run Mozilla's <a href="https://wiki.mozilla.org/Buildbot/Talos#tp5">TP5</a> pageload benchmark 5 times.  TP5 loads 100 popular
     webpages, served from a local webserver.  We load the pages round-robin into
     30 different tabs, with a 10s delay between pageloads.</li>
-<li>Record '''After TP5''' memory usage.  '''After TP5 [+30s]''' and '''After
-    TP5 [+30s, forced GC]''' are measured after sitting idle for 30 seconds and
+<li>Record <strong>After TP5</strong> memory usage.  <strong>After TP5 [+30s]</strong> and <strong>After
+    TP5 [+30s, forced GC]</strong> are measured after sitting idle for 30 seconds and
     then after forcing a garbage collection, respectively. In theory, these
     latter two lines should follow each other closely.</li>
-<li>Close all open tabs and record '''After TP5, tabs closed''' and then
-    '''After TP5, tabs closed [+30s]''' memory usage.</li>
+<li>Close all open tabs and record <strong>After TP5, tabs closed</strong> and then
+    <strong>After TP5, tabs closed [+30s]</strong> memory usage.</li>
 </ul>
 <p>Every time we measure memory usage, we also collect a full snapshot of
 about:memory.  You can browse these snapshots by clicking on any point in the
 graph. The data that was used for generating that particular point will be
 highlighted in red.</p>
 <h2 id="whats-the-difference-between-resident-memory-and-explicit">What's the difference between "resident memory" and "explicit"?</h2>
-<p>'''Resident memory''' (also known as "resident set size" or RSS) is the single
+<p><strong>Resident memory</strong> (also known as "resident set size" or RSS) is the single
 best measure of a process's memory usage.  RSS measures the amount of physical
 memory (RAM) Firefox's process is using.  This counts code, but does not count
 memory paged out to disk.</p>
-<p>'''Explicit memory''' is memory that Firefox has explicitly allocated, either
+<p><strong>Explicit memory</strong> is memory that Firefox has explicitly allocated, either
 via <code>malloc</code> or <code>mmap</code>.  The explicit measure is particularly useful when
 checking for memory leaks.  If the measured explicit value at two points in time
 is the same, then we've <code>free</code>'d as much as we've <code>malloc</code>'ed between those two
 points in time.  In contrast, the RSS values at those two points might not be
 the same, for example because our heap might become fragmented.</p>
-<p>The ''explicit'' measurement comes from Firefox itself. It has had bugs in the
+<p>The <em>explicit</em> measurement comes from Firefox itself. It has had bugs in the
 past, and the exact set of allocations it covers has changed over time.  It is
-therefore tricky to compare ''explicit'' measurements between two distant
-builds.  The ''resident'' numbers come from the operating system and should be
+therefore tricky to compare <em>explicit</em> measurements between two distant
+builds.  The <em>resident</em> numbers come from the operating system and should be
 comparable between all builds.</p>
 <h2 id="why-are-there-gaps-in-the-graphs">Why are there gaps in the graphs?</h2>
 <p>Gaps indicate areas where the relevant builds failed to be fully tested, or
@@ -109,16 +109,15 @@ test framework (yikes!). For the Explicit memory graphs, much of the memory
 reporting framework was not well polished until about July 2011. This explains
 the lack of earlier data as well as the rather sporadic datapoints for the first
 few months.</p>
-<h2 id="rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh</h2>
-<p>start" -- doesn't that mean Firefox leaks a ton of memory?</p>
+<h2 id="rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" -- doesn't that mean Firefox leaks a ton of memory?</h2>
 <p>Well, not exactly.</p>
-<p>If you look at the equivalent ''explicit'' numbers, you'll see that the '''After
-TP5, tabs closed [+30s]''' measure is very close to the '''Fresh start'''
+<p>If you look at the equivalent <em>explicit</em> numbers, you'll see that the <strong>After
+TP5, tabs closed [+30s]</strong> measure is very close to the <strong>Fresh start</strong>
 measure. This means Firefox is releasing most all of the memory it allocates --
 so it is not leaking memory, at least not in the traditional sense.</p>
 <p>So if Firefox has freed all the memory it allocated during the test, why is it
 using more memory after the test?  Our data shows that most of the difference is
-due to ''heap fragmentation''.  Before the test, all the objects on our heap are
+due to <em>heap fragmentation</em>.  Before the test, all the objects on our heap are
 tightly packed.  But after the test, our heap uses twice as much space for the
 same amount of storage, because the objects on the heap now have gaps between
 them.</p>
