[FAQ] Use emdash instead of --

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -27,7 +27,7 @@
 <li><a href="#how-is-this-data-generated">How is this data generated?</a></li>
 <li><a href="#whats-the-difference-between-resident-memory-and-explicit">What's the difference between "resident memory" and "explicit"?</a></li>
 <li><a href="#why-are-there-gaps-in-the-graphs">Why are there gaps in the graphs?</a></li>
-<li><a href="#rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" -- doesn't that mean Firefox leaks a ton of memory?</a></li>
+<li><a href="#rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-wzxhzdk0-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" &mdash; doesn't that mean Firefox leaks a ton of memory?</a></li>
 <li><a href="#this-is-all-well-and-good-but-my-firefox-still-leaks-like-a-sieve">This is all well and good, but my Firefox still leaks like a sieve.</a><ul>
 <li><a href="#check-for-add-on-leaks">Check for add-on leaks</a><ul>
 <li><a href="#if-firefox-still-leaks-even-in-safe-mode-file-a-bug">If Firefox still leaks, even in safe mode, file a bug!</a></li>
@@ -109,7 +109,7 @@ test framework (yikes!). For the Explicit memory graphs, much of the memory
 reporting framework was not well polished until about July 2011. This explains
 the lack of earlier data as well as the rather sporadic datapoints for the first
 few months.</p>
-<h2 id="rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" -- doesn't that mean Firefox leaks a ton of memory?</h2>
+<h2 id="rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-wzxhzdk0-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" &mdash; doesn't that mean Firefox leaks a ton of memory?</h2>
 <p>Well, not exactly.</p>
 <p>If you look at the equivalent <em>explicit</em> numbers, you'll see that the <strong>After
 TP5, tabs closed [+30s]</strong> measure is very close to the <strong>Fresh start</strong>
