[FAQ] Fix a few typos and a setence fragment

--- a/html/faq.htm
+++ b/html/faq.htm
@@ -27,7 +27,7 @@
 <li><a href="#how-is-this-data-generated">How is this data generated?</a></li>
 <li><a href="#whats-the-difference-between-resident-memory-and-explicit">What's the difference between "resident memory" and "explicit"?</a></li>
 <li><a href="#why-are-there-gaps-in-the-graphs">Why are there gaps in the graphs?</a></li>
-<li><a href="#rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-wzxhzdk0-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" &mdash; doesn't that mean Firefox leaks a ton of memory?</a></li>
+<li><a href="#rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-wzxhzdk1-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" &mdash; doesn't that mean Firefox leaks a ton of memory?</a></li>
 <li><a href="#this-is-all-well-and-good-but-my-firefox-still-leaks-like-a-sieve">This is all well and good, but my Firefox still leaks like a sieve.</a><ul>
 <li><a href="#check-for-add-on-leaks">Check for add-on leaks</a><ul>
 <li><a href="#if-firefox-still-leaks-even-in-safe-mode-file-a-bug">If Firefox still leaks, even in safe mode, file a bug!</a></li>
@@ -42,8 +42,8 @@
 <h2 id="what-is-this-site">What is this site?</h2>
 <p><em>Are We Slim Yet?</em> is a Firefox memory benchmark as well as a site for
 visualizing the data it produces. The aim is to track Firefox's memory
-footprint. Both to measure its progress over time, and to catch any regressions
-that are introduced.</p>
+footprint &mdash; both to measure its progress over time, and to catch any
+regressions that are introduced.</p>
 <p><em>Are we Slim Yet?</em> was created by John Schoenick of Mozilla's <a href="https://wiki.mozilla.org/Performance/MemShrink">MemShrink</a>
 team.  The MemShrink team was formed in June 2011, and is tasked with monitoring
 and reducing Firefox's memory usage.</p>
@@ -107,9 +107,9 @@ where the data being graphed was not available. The most notable is a gap from
 July to August 2011 where the TP5 pageset would actually trigger a crash in our
 test framework (yikes!). For the Explicit memory graphs, much of the memory
 reporting framework was not well polished until about July 2011. This explains
-the lack of earlier data as well as the rather sporadic datapoints for the first
-few months.</p>
-<h2 id="rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-wzxhzdk0-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" &mdash; doesn't that mean Firefox leaks a ton of memory?</h2>
+the lack of earlier data as well as the rather sporadic data points for the
+first few months.</p>
+<h2 id="rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-wzxhzdk1-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" &mdash; doesn't that mean Firefox leaks a ton of memory?</h2>
 <p>Well, not exactly.</p>
 <p>If you look at the equivalent <em>explicit</em> numbers, you'll see that the <strong>After
 TP5, tabs closed [+30s]</strong> measure is very close to the <strong>Fresh start</strong>
@@ -147,7 +147,7 @@ want to know which one is to blame.</p>
 <p>To figure out which add-on is leaking, start Firefox up outside safe mode,
 disable half of your add-ons, and see if the leaks persist.  Repeat this process
 to narrow down to just one (or a few) leaky add-ons.  (If it takes a long time
-for the leak to become aparent, you can look for <a href="https://developer.mozilla.org/en/Zombie_compartments#Reactive_checking">zombie compartments</a>, a
+for the leak to become apparent, you can look for <a href="https://developer.mozilla.org/en/Zombie_compartments#Reactive_checking">zombie compartments</a>, a
 common type of leak which is easy to identify even before Firefox starts using
 gigabytes of memory.)</p>
 <p>Once you have figured out which add-on(s) is (are) leaking, you're almost done!
