--- a/html/faq.htm
+++ b/html/faq.htm
@@ -29,7 +29,8 @@
 <li><a href="#why-are-there-gaps-in-the-graphs">Why are there gaps in the graphs?</a></li>
 <li><a href="#rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-mdash-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" &mdash; doesn't that mean Firefox leaks a ton of memory?</a></li>
 <li><a href="#this-is-all-well-and-good-but-my-firefox-still-leaks-like-a-sieve">This is all well and good, but my Firefox still leaks like a sieve.</a><ul>
-<li><a href="#check-for-add-on-leaks">Check for add-on leaks</a><ul>
+<li><a href="#check-your-version">Check your version</a><ul>
+<li><a href="#check-for-add-on-leaks">Check for add-on leaks</a></li>
 <li><a href="#if-firefox-still-leaks-even-in-safe-mode-file-a-bug">If Firefox still leaks, even in safe mode, file a bug!</a></li>
 </ul>
 </li>
@@ -40,23 +41,25 @@
 </ul>
 </div>
 <h2 id="what-is-this-site">What is this site?</h2>
-<p><em>Are We Slim Yet?</em> is a Firefox memory benchmark as well as a site for
-visualizing the data it produces. The aim is to track Firefox's memory
-footprint &mdash; both to measure its progress over time, and to catch any
-regressions that are introduced.</p>
-<p><em>Are we Slim Yet?</em> was created by John Schoenick of Mozilla's <a href="https://wiki.mozilla.org/Performance/MemShrink">MemShrink</a>
+<p><em>Are We Slim Yet?</em> is a Firefox memory benchmark and a site for visualizing the
+historic results of that benchmark.</p>
+<p>Are we Slim Yet? was created by John Schoenick of Mozilla's <a href="https://wiki.mozilla.org/Performance/MemShrink">MemShrink</a>
 team.  The MemShrink team was formed in June 2011, and is tasked with monitoring
 and reducing Firefox's memory usage.</p>
-<p>The source for <em>Are We Slim Yet?</em> and its benchmarks is available on
-<a href="https://github.com/Nephyrin/MozAreWeSlimYet">GitHub</a>.</p>
+<p>This site allows us to observe long-term trends in memory usage and hopefully
+catch regressions before we ship them to users.</p>
+<p>Come say hi on <a href="https://github.com/Nephyrin/MozAreWeSlimYet">GitHub</a>.</p>
 <h2 id="exactly-which-versions-of-firefox-are-plotted-here">Exactly which versions of Firefox are plotted here?</h2>
-<p>For every <a href="http://hg.mozilla.org/mozilla-central/pushloghtml">push</a> to Mozilla's central repository, the build
-infrastructure generates and tests a <a href="https://tbpl.mozilla.org/">set of builds</a>. For historical data,
-prior to March 2012, we have tested the respective Firefox [nightly] builds. For
-specific ranges, we may also have chosen to run per-changeset (rather than
-per-push) builds in order to track down a regression. All tests are run against
-Linux 64-bit (non-pgo) compiles, so platform-dependent regressions may not be
-captured here.</p>
+<p>For each <a href="http://hg.mozilla.org/mozilla-central/pushloghtml">change</a> to Mozilla's central repository, our build
+infrastructure generates a <a href="ftp://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-central-linux64/">build</a> which we test and include
+in the graphs here.</p>
+<p>We don't keep these per-change builds are around forever, so for data points
+before March 2012, we tested Firefox <a href="http://nightly.mozilla.org/">nightly builds</a>.</p>
+<p>A push may include multiple changes, and we have the ability to build and test
+individual changes, where necessary.  We use this to help us figure out exactly
+where an increase in memory usage came from.</p>
+<p>We run against Linux 64-bit (non-pgo) builds, so platform-specific changes may
+not be captured here.</p>
 <p>The dates on the x-axis indicate when we switched development <em>to</em> a given
 version.  For example, we started developing Firefox 5 on March 3, 2011, but we
 didn't release it for three months after that.  In the meantime, we started on
@@ -66,20 +69,19 @@ to the points directly under the "FF N+1" line, but we normally make some
 changes to Firefox N even after we started working on Firefox N+1, and those
 changes aren't plotted here.</p>
 <h2 id="how-is-this-data-generated">How is this data generated?</h2>
-<p>We run the target build of Firefox through a benchmark script (written using
-<a href="https://github.com/mozautomation/mozmill">mozmill</a>) and measure its memory usage at a variety of points along the way.
-The testing procedure is as follows.</p>
+<p>We run the target build of Firefox (Linux 64-bit, non-pgo) through a benchmark
+script (written using <a href="https://github.com/mozautomation/mozmill">mozmill</a>) and measure its memory usage at a variety of
+points along the way.  The testing procedure is as follows.</p>
 <ul>
-<li>Start the browser, record <strong>Fresh start</strong> memory.</li>
+<li>Start the browser, record <strong>fresh start</strong> memory.</li>
 <li>Run Mozilla's <a href="https://wiki.mozilla.org/Buildbot/Talos#tp5">TP5</a> pageload benchmark 5 times.  TP5 loads 100 popular
     webpages, served from a local webserver.  We load the pages round-robin into
-    30 different tabs, with a 10s delay between pageloads.</li>
-<li>Record <strong>After TP5</strong> memory usage.  <strong>After TP5 [+30s]</strong> and <strong>After
-    TP5 [+30s, forced GC]</strong> are measured after sitting idle for 30 seconds and
-    then after forcing a garbage collection, respectively. In theory, these
-    latter two lines should follow each other closely.</li>
-<li>Close all open tabs and record <strong>After TP5, tabs closed</strong> and then
-    <strong>After TP5, tabs closed [+30s]</strong> memory usage.</li>
+    30 different tabs, with a 10 second delay between pageloads.</li>
+<li>Record <strong>after TP5</strong> memory usage.</li>
+<li>Sit idle for 30 seconds and record <strong>after TP5 [+30s]</strong>.</li>
+<li>Force a garbage collection and measure <strong>after TP5 [+30s, forced GC]</strong>.</li>
+<li>Close all open tabs and record <strong>after TP5, tabs closed</strong> and then
+    <strong>after TP5, tabs closed [+30s]</strong>.</li>
 </ul>
 <p>Every time we measure memory usage, we also collect a full snapshot of
 about:memory.  You can browse these snapshots by clicking on any point in the
@@ -105,17 +107,17 @@ comparable between all builds.</p>
 <p>Gaps indicate areas where the relevant builds failed to be fully tested, or
 where the data being graphed was not available. The most notable is a gap from
 July to August 2011 where the TP5 pageset would actually trigger a crash in our
-test framework (yikes!). For the Explicit memory graphs, much of the memory
-reporting framework was not well polished until about July 2011. This explains
-the lack of earlier data as well as the rather sporadic data points for the
-first few months.</p>
+test framework (yikes!).</p>
+<p>Much of the code for generating the <em>explicit</em> numbers was not stable until
+around July 2011.  This explains the lack of earlier data as well as the rather
+sporadic data points for the first few months.</p>
 <h2 id="rss-after-tp5-tabs-closed-30s-is-almost-twice-as-high-as-rss-fresh-start-mdash-doesnt-that-mean-firefox-leaks-a-ton-of-memory">"RSS: After TP5, tabs closed [+30s]" is almost twice as high as "RSS: Fresh start" &mdash; doesn't that mean Firefox leaks a ton of memory?</h2>
 <p>Well, not exactly.</p>
-<p>If you look at the equivalent <em>explicit</em> numbers, you'll see that the <strong>After
-TP5, tabs closed [+30s]</strong> measure is very close to the <strong>Fresh start</strong>
-measure. This means Firefox is releasing most all of the memory it allocates --
-so it is not leaking memory, at least not in the traditional sense.</p>
-<p>So if Firefox has freed all the memory it allocated during the test, why is it
+<p>If you look at the equivalent <em>explicit</em> numbers, you'll see that the <em>after
+TP5, tabs closed [+30s]</em> measure is very close to the <em>fresh start</em> measure.
+This means Firefox is releasing most all of the memory it allocates, so it is
+not leaking memory, at least not in the traditional sense.</p>
+<p>But if Firefox has freed all the memory it allocated during the test, why is it
 using more memory after the test?  Our data shows that most of the difference is
 due to <em>heap fragmentation</em>.  Before the test, all the objects on our heap are
 tightly packed.  But after the test, our heap uses twice as much space for the
@@ -131,6 +133,7 @@ should not significantly increase over time.</p>
 <h2 id="this-is-all-well-and-good-but-my-firefox-still-leaks-like-a-sieve">This is all well and good, but my Firefox still leaks like a sieve.</h2>
 <p>We're sorry to hear that, and we'd like to help.  Here are some diagnostics you
 can try.</p>
+<h4 id="check-your-version">Check your version</h4>
 <p>First, double-check that you're on the latest version of Firefox.  We won't be
 able to help much if you're running an old version.  You can check for updates
 in the "Help -&gt; About Firefox" menu.</p>
@@ -151,17 +154,20 @@ for the leak to become apparent, you can look for <a href="https://developer.moz
 common type of leak which is easy to identify even before Firefox starts using
 gigabytes of memory.)</p>
 <p>Once you have figured out which add-on(s) is (are) leaking, you're almost done!
-Just <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Core&amp;component=General&amp;status_whiteboard=[MemShrink]">file a bug</a>. (Please check that "[MemShrink]" is in the "status
+Just <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Core&amp;component=General&amp;status_whiteboard=[MemShrink]">file a bug</a>. Please check that "[MemShrink]" is in the "status
 whiteboard" field, but don't worry about the other metadata like the component;
-we'll fix it). We'll take care of contacting the add-on developer and helping
-him or her fix the problem.</p>
-<p>If you have trouble with any of this, find us on [IRC] (irc.mozilla.org,
+we'll fix it.  (You may have to click "show advanced fields" in order to see
+the status whiteboard field.)</p>
+<p>If you file a bug, we'll take care of contacting the add-on developer and
+helping him or her fix the problem.</p>
+<p>If you have trouble with any of this, find us on <a href="https://wiki.mozilla.org/IRC">IRC</a> (irc.mozilla.org,
 #memshrink).  We're happy to help.</p>
 <h4 id="if-firefox-still-leaks-even-in-safe-mode-file-a-bug">If Firefox still leaks, even in safe mode, file a bug!</h4>
 <p>If the latest version of Firefox leaks for you, even in safe mode, we
 definitely want to hear about it.  Please, <em>please</em> <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Core&amp;component=General&amp;status_whiteboard=[MemShrink]">file a bug</a> (and please
-check that [MemShrink] is in the status whiteboard), find us on IRC
-(irc.mozilla.org, #memshrink), send smoke signals... do something!  We need
-your help, particularly in this case.</p>  <div id="footer"></div>
+check that [MemShrink] is in the status whiteboard).</p>
+<p>If you don't want to file a bug, find us on IRC (irc.mozilla.org, #memshrink),
+send smoke signals...do something!  We need your help, particularly in this
+case.</p>  <div id="footer"></div>
 </body>
 </html>
