--- a/html/status/index.htm
+++ b/html/status/index.htm
@@ -9,6 +9,7 @@
     - You can obtain one at http://mozilla.org/MPL/2.0/.
     -->
   <title>ARE WE SLIM YET?</title>
+  <meta charset="UTF-8" />
   <script type="text/javascript" src="/jquery-1.7.1.min.js"></script>
   <script type="text/javascript" src="./status.js"></script>
   <link href="/slimyet.css" rel="stylesheet" />
